# kis_mcp_server_adk

./: .gitignore  LICENSE  README.md  client_test.py  example.py  pyproject.toml  server.py
src/kis_mcp_server_adk/: main.py  server.py
tests/: conftest.py  test_integration.py
